# django-user-tel

./: .pre-commit-config.yaml  README.md  makemigrations.py  noxfile.py  pyproject.toml  runtests.py
.github/workflows/: ci.yml  publish.yml
tests/: test_models.py  test_settings.py
user_tel/: admin.py  apps.py  factory.py  forms.py  models.py
user_tel/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
