[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'
extend-exclude = '''
/(
  | migrations
)/
'''

[tool.coverage.run]
branch = true
omit = [
  "*/.venv/*",
  "runtests.py",
  "makemigrations.py"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __str__"
]
omit = [
  "*/.venv/*",
  "runtests.py",
  "makemigrations.py"
]
show_missing = true
skip_covered = true
skip_empty = true
precision = 2

[tool.poetry]
name = "django-user-tel"
version = "1.0.1"
description = "Custom, simple Django User model with telephone number as username"
authors = ["Khasbilegt.TS <khasbilegt.ts@gmail.com>"]
license = "MIT"
homepage = "https://github.com/khasbilegt/django-user-tel"
repository = "https://github.com/khasbilegt/django-user-tel"
keywords = ["django", "model", "user", "telephone", "phone number", "username", "custom"]
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.2",
]
packages = [
    { include = "user_tel"},
]
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
black = "^23.1.0"
coverage = {extras = ["toml"], version = "^7.2.1"}
nox = "^2022.8.7"
ruff = "^0.0.256"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "W", 
  "DJ",  # django
  "C90", # mccabe
  "I", # isort
  "B", # flake8-bugbear
  "N", # pep8-naming
  "UP", # pyupgrade
  "YTT", # flake8-2020
  "FBT", # flake8-boolean-trap
  "C40", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "EM", # flake8-errmsg
  "SIM", # flake8-simplify
]


exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "migrations",
]

line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"**/models.py" = ["EM101"]